# Postgres_pgvector

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env-example.env  init.sh  pyproject.toml  requirements.txt  setup.py  tree_output.txt
docker/: Dockerfile  docker-compose.yml  docker_pg_hba.conf  docker_postgres.conf
scripts/: load_data.py  load_elsevier_data.py  test_search.py
semantic_doc_search/: __init__.py
semantic_doc_search/cli/: __init__.py  document_manager.py  main.py  search_cli.py  search_commands.py
semantic_doc_search/cli/commands/: __init__.py  docs.py  search.py
semantic_doc_search/config/: __init__.py  settings.py
semantic_doc_search/core/: __init__.py  database.py  embeddings.py  models.py  search.py
semantic_doc_search/database/: __init__.py  connection.py  documents.py
semantic_doc_search/embeddings/: __init__.py  document_processor.py  search.py  vectorizer.py
semantic_doc_search/models/: __init__.py  document.py
semantic_doc_search/sql/: create_tables.sql  functions.sql  init_db.sql
sql/: 00_init_extensions.sql  01_create_schema.sql  02_create_tables.sql
src/: __init__.py
src/api/: dependencies.py  main.py  models.py
src/api/routes/: categories.py  documents.py  search.py  visualization.py
src/database/: config.py  create_tables.sql  db.py  init_db.sql  models.py
src/embeddings/: config.py  embeddings.py
src/scripts/: init_db.py  sample_data.py
src/search/: search.py
src/visualization/: visualization.py
tests/: __init__.py  test_basics.py  test_database.py  test_embeddings.py  test_search.py
